force-app/main/default/objects/student__c/fields/class__c.field-meta.xml
<CustomField>
    <fullName>class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>class</label>
    <referenceTo>class__c</referenceTo>
    <relationshipLabel>students</relationshipLabel>
    <relationshipName>students</relationshipName>
    <type>Lookup</type>
</CustomField>