force-app/main/default/objects/student__c/fields/Mobile_number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_number__c</fullName>
    <label>Mobile number</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>