force-app/main/default/objects/student__c/fields/ssubject__c.field-meta.xml
<CustomField>
    <fullName>ssubject__c</fullName>
    <label>subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>physics</fullName>
            </value>
            <value>
                <fullName>chemistry</fullName>
            </value>
            <value>
                <fullName>biology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>