force-app/main/default/objects/student__c/fields/student__c.field-meta.xml
<CustomField>
    <fullName>student__c</fullName>
    <inlineHelpText>phy
chem
bio</inlineHelpText>
    <label>student</label>
    <type>Email</type>
</CustomField>